Nav overflow fix on mobile pt 14

--- a/blocks/src/blocks/mobile-container/style.scss
+++ b/blocks/src/blocks/mobile-container/style.scss
@@ -109,7 +109,7 @@
 
     @media (max-width: 768px) {
         overflow-y: scroll;
-        height: 100vh;
+        height: 100%;
     }
 }
 
